# Pusto_studio_test_assigment

./: .gitignore  player_level_prize_export.csv  pyproject.toml
settings/: settings.py  urls.py
task1/: README.md  models.py  urls.py  views.py
task2/: models.py  urls.py  views.py
task2/fixtures/: task2.json
task2/management/commands/: export_csv.py
task2/migrations/: 0001_initial.py
